--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "react-router-dom": "4.1.1",
     "style-loader": "0.18.2",
     "typescript": "2.4.1",
-    "url-loader": "0.5.9",
+    "url-loader": "^1.0.1",
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2"
   },
   "dependencies": {
     "aspnet-webpack": "2.0.0",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "uglifyjs-webpack-plugin": "^1.2.7"
   }
 }
